--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: postgres_container
     image: postgres
     environment:
+      POSTGRES_DB: webshop
       POSTGRES_USER: ${POSTGRES_USER:-root}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-pass}
       PGDATA: /data/postgres
