--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# Postgres Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/webshop
+spring.datasource.username=root
+spring.datasource.password=pass
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+#spring.datasource.schema=classpath:/schema.sql
+spring.datasource.continue-on-error=true
