Füge Lombok hinzu und entferne Boilerplate Code in den Entities; Versuche die Data Validation mit Combinator Pattern [VA-57]

--- a/pom.xml
+++ b/pom.xml
@@ -73,5 +73,19 @@
             <version>5.3.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
+
+
     </dependencies>
 </project>
