--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
 # Postgres Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/webshop
-spring.datasource.username=root
-spring.datasource.password=pass
+app.primary.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/webshop
+app.primary.datasource.username=root
+app.primary.datasource.password=pass
+app.primary.datasource.sql-dialect=Postgres
+
+
+# MongoDB Configuration
+app.logging.datasource.jdbcURL=jdbc:mongodb://localhost:27017/local.log?authSource=admin
+#app.logging.datasource.jdbcURL=jdbc:mongodb://localhost:27017/webshop?authSource=admin
+#app.logging.datasource.jdbcURL=jdbc:mongodb://root:pass@localhost:27017/webshop?authSource=admin
+app.logging.datasource.username=root
+app.logging.datasource.password=pass
+#spring.data.mongodb.database=webshop_logging
+#spring.data.mongodb.uri=mongodb://root:root@localhost:27017/?authSource=admin
+#app.logging.datasource.sql-dialect=
+
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-debug=true
-spring.datasource.initialization-mode=always
-spring.datasource.initialize=true
-spring.datasource.continue-on-error=true
+spring.jpa.database=default
