--- a/pom.xml
+++ b/pom.xml
@@ -103,5 +103,16 @@
             <version>2.10.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.5.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-webmvc-core</artifactId>
+            <version>1.5.8</version>
+        </dependency>
     </dependencies>
 </project>
