--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 # Postgres Configuration
-spring.datasource.url=jdbc:postgresql://10.24.48.3:5432/postgres
-spring.datasource.username=art
-spring.datasource.password=sN@Wr6YViNH
+#spring.datasource.url=jdbc:postgresql://10.24.48.3:5432/postgres
+#spring.datasource.username=art
+#spring.datasource.password=sN@Wr6YViNH
+spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.password=pass
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
