--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,11 @@ spring.datasource.url=jdbc:postgresql://10.24.48.3:5432/postgres
 spring.datasource.username=art
 spring.datasource.password=sN@Wr6YViNH
 
+# Local
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=root
+#spring.datasource.password=pass
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
