Füge einen SuccessLoginHandler hinzu und übertrage den Warenkorb eines Unregistrierten Nutzers bei Login [VA-95]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,4 @@ spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 spring.datasource.continue-on-error=true
 
-
-host.development=http://localhost:8080
+host.url=http://localhost:8080
