Ziehe die größe für die Images aus der application.properties und passe die Upload Image funktion an[VA-124]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,17 @@ spring.datasource.initialize=true
 spring.datasource.continue-on-error=true
 
 spring.servlet.multipart.max-file-size=2MB
-spring.servlet.multipart.max-request-size=2MB
+spring.servlet.multipart.max-request-size=5MB
+
+image.small.height=200
+image.small.width=200
+
+image.medium.height=300
+image.medium.width=300
+
+image.big.height=500
+image.big.width=500
+
+
 
 host.url=http://localhost:8080
