--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 # Postgres Configuration
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-
-# Local
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=root
-#spring.datasource.password=pass
+spring.datasource.url=${POSTGRES_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
